--- a/data/licensedb.properties
+++ b/data/licensedb.properties
@@ -1,5 +1,5 @@
-#HSQL Database Engine 2.5.0
-#Wed Jan 18 14:40:07 WAT 2023
-version=2.5.0
-modified=no
+#HSQL Database Engine 2.6.0
+#Sat Feb 04 06:48:26 WAT 2023
+version=2.6.0
+modified=yes
 tx_timestamp=236
